# JARVIS-V01

./: .gitignore  CMakeLists.txt  LICENSE  PHASE1_INTEGRATION_GUIDE.md  PORCUPINE_SETUP.md  README.md  build.ps1
configs/: jarvis.json
include/audio/: audio_capture.h  audio_pipeline.h
include/core/: jarvis_core.h  nlu_engine.h
include/speech/: speech_recognizer.h  text_to_speech.h  wake_word_detector.h
include/utils/: config_manager.h  logger.h
plugins/: CMakeLists.txt
plugins/sample/: sample_plugin.cpp
src/: CMakeLists.txt  main.cpp
src/audio/: audio_capture.cpp  audio_pipeline.cpp
src/core/: jarvis_core.cpp
src/speech/: speech_recognizer.cpp  text_to_speech.cpp  wake_word_detector.cpp
src/utils/: config_manager.cpp  logger.cpp
tests/: CMakeLists.txt  test_audio_capture.cpp  test_speech_recognizer.cpp  test_text_to_speech.cpp  test_wake_word.cpp
